Add Topic Request
To Index

--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@ Choose your preferred topic:</br>
 <a href="Science/index.html">Science</a></br>
 <a href="Art/index.html">Art</a>
 
+<a href="mailto:micahwillett@pccs.org?subject=Request%20new%20topic">Request New Topic</a>
+
 <div id="disqus_thread"></div>
 <script>
     /**
