--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@ function clickScience() {
 } -->
 Choose your preferred topic:</br>
 <a href="Science/index.html">Science</a></br>
-<a href="Art/index.html">Art</a>
+<a href="Art/index.html">Art</a></br></br></br>
+
+</br>
+
 
 <a href="mailto:micahwillett@pccs.org?subject=Request%20new%20topic">Request New Topic</a>
 
