Add Request Topic
To da rest of dem

--- a/Art/index.html
+++ b/Art/index.html
@@ -7,7 +7,11 @@
   	<a href="painting.html">Painting</a></br>
   	<a href="sculpture.html">Sculpture</a></br>
   	<a href="music.html">Music</a></br>
-  	<a href="literature.html">Literature</a>
+  	<a href="literature.html">Literature</a></br></br></br>
+
+
+    <a href="mailto:micahwillett@pccs.org?subject=Request%20new%20topic">Request New Topic</a>
+
 
     <div id="disqus_thread"></div>
 <script>
