--- a/Science/index.html
+++ b/Science/index.html
@@ -7,7 +7,11 @@
     	<a href="zoology.html">Zoology</a></br>
     	<a href="math.html">Math</a></br>
     	<a href="physics.html">Physics</a></br>
-    	<a href="geology.html">Geology</a>
+    	<a href="geology.html">Geology</a></br></br></br>
+
+
+      <a href="mailto:micahwillett@pccs.org?subject=Request%20new%20topic">Request New Topic</a>
+
 
       <div id="disqus_thread"></div>
 <script>
